[package]
name = "speedate"
authors = ["Samuel Colvin <s@muelcolvin.com>"]
version = "0.17.0"
edition = "2021"
description = "Fast and simple datetime, date, time and duration parsing"
readme = "README.md"
license = "MIT"
keywords = ["ISO8601", "RFC3339", "datetime", "date", "time"]
categories = ["date-and-time", "parsing"]
homepage = "https://github.com/pydantic/speedate/"
repository = "https://github.com/pydantic/speedate/"

[dependencies]
arrayvec = { version = "0.7.6", default-features = false }
lexical-parse-float = { version = "1.0.5", default-features = false }
strum = { version = "0.27", default-features = false, features = ["derive"] }
strum_macros = "0.27"

[dev-dependencies]
chrono = "0.4.19"
iso8601 = "0.6.1"
paste = "1.0.7"

[features]
default = ["std"]

# Required for Date::today and DateTime::now
std = []
